# MLOPS

./: .gitignore  H20_model_selection.py  cleaning.py  main.py  neon_prompt.sql  pyproject.toml  splitting.py  test.py
automl_models/: leaderboard.csv
data/: cleaned.csv
drift_analysis/: nannyml_drift.py
fastapi_app/: config.py  main.py  schemas.py  utils.py
models/: train_dl.py  train_gbm.py  train_glm.py
splits/: test.csv  train.csv  validate.csv
