[project]
name = "mlops-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.6",
    "h2o>=3.46.0.9",
    "ipython>=9.8.0",
    "matplotlib>=3.10.7",
    "mlflow>=3.7.0",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "river>=0.23.0",
    "ruff>=0.14.8",
    "scikit-learn>=1.7.2",
    "sniffio>=1.3.1",
]

[tool.uv.sources]
nannyml = { git = "https://github.com/NannyML/nannyml.git" }
